[package]
name = "media-research-stack"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local Apple Silicon stack for public-media research with av-ingest, SoundKit, and Cohere MLX ASR"
repository = "https://github.com/wavey-ai/media-research-stack"
readme = "README.md"
publish = false
build = "build.rs"

[dependencies]
anyhow = "1"
asr-api = { git = "https://github.com/wavey-ai/asr-api.git", rev = "3e3ea8314d79ba2218a225274875cd7cf4b3e9b8", default-features = false, features = ["cohere-mlx", "audio-decoder"] }
av-ingest-proxy = { git = "https://github.com/wavey-ai/av-ingest.git", rev = "76780137c0f59ec28615a979be66b9d183dc038b", package = "av-ingest-proxy" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1.0"
upload-response = { git = "https://github.com/wavey-ai/web-services.git", package = "upload-response" }
web-service = { git = "https://github.com/wavey-ai/web-services.git", package = "web-service" }

[dev-dependencies]
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
http = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The current GitHub head of playlists has a workspace-relative dependency.
# Keep the standalone build on the known-good revision used by asr-api.
[patch."https://github.com/wavey-ai/playlists.git"]
playlists = { git = "https://codeberg.org/wavey-ai/playlists.git", rev = "a069d9ec7bd97f1b96a6b435541be8304fc680a4" }
